--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #191b1c;
+    --foreground: #191b1c;
   }
 }
 
