--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,3 +61,12 @@ body {
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
